objects/HRS__c.object
<CustomObject>
    <fields>
        <fullName>Bank__c</fullName>
        <inlineHelpText>Select which bank the homeowner is using, if any</inlineHelpText>
        <label>Bank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KeyBank</fullName>
                </value>
                <value>
                    <fullName>First Federal Lakewood</fullName>
                </value>
                <value>
                    <fullName>GenoaBank</fullName>
                </value>
                <value>
                    <fullName>Waterford Bank</fullName>
                </value>
                <value>
                    <fullName>Third Federal Savings and Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <inlineHelpText>Enter the date we received escrow funds</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Amount__c</fullName>
        <inlineHelpText>amount we are holding in escrow sans fees</inlineHelpText>
        <label>Escrow Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Fee__c</fullName>
        <inlineHelpText>Fees to CRS for this service</inlineHelpText>
        <label>Escrow Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Remainder__c</fullName>
        <formula>(( Escrow_Amount__c )-  Total_Drawn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escrow Remainder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Homeowner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Link to the contact who is using the HRS</inlineHelpText>
        <label>Homeowner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Homeowner Representative Services</relationshipLabel>
        <relationshipName>Homeowner_Representative_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Homeowner&apos;s Property</description>
        <inlineHelpText>Link to the property where the work is being done</inlineHelpText>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Homeowner Representative Services</relationshipLabel>
        <relationshipName>Homeowner_Representative_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retainer_to_be_Released__c</fullName>
        <formula>Total_Retainer__c  -  Total_Retainer_Drawn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retainer to be Released</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Escrow_Amount__c  +  Escrow_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Drawn__c</fullName>
        <label>Total Drawn</label>
        <summarizedField>HRS_Disbursement__c.Draw_Amount__c</summarizedField>
        <summaryForeignKey>HRS_Disbursement__c.HRS_name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Retainer_Drawn__c</fullName>
        <label>Total Retainer Drawn</label>
        <summarizedField>HRS_Disbursement__c.Retainer_Draw_Amount__c</summarizedField>
        <summaryForeignKey>HRS_Disbursement__c.HRS_name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Retainer__c</fullName>
        <label>Total Retainer</label>
        <summarizedField>HRS_Disbursement__c.Retainer_Held__c</summarizedField>
        <summaryForeignKey>HRS_Disbursement__c.HRS_name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Homeowner Representative Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HRS-{000000}</displayFormat>
        <label>HRS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Homeowner Representative Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>